--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     
 <p>The usually deep purple roots of beetroot are eaten either grilled, boiled, or roasted as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable.</p>
 
-<blockquote cite="— Jim Halpert">Fact, bears eat beets. Bears, beets, “Battlestar Galactica.”</blockquote>
+<blockquote>>Fact, bears eat beets. Bears, beets, “Battlestar Galactica.”</blockquote> <cite>— Jim Halpert</cite>
     
 I have some weird habits. For instance, I love beets. Show me a salad bar and I will clean them out of their beets.
 — Chris Pratt
