--- a/index.html
+++ b/index.html
@@ -20,10 +20,14 @@
     
 <blockquote>I have some weird habits. For instance, I love beets. Show me a salad bar and I will clean them out of their beets.
 — Chris Pratt</blockquote>
-Common varieties
-Albino
-Bull’s Blood Chioggia
-Detroit Dark Red Early Wonder
+    
+<h2>Common varieties</h2>
+<ol>
+<li>Albino
+Bull’s Blood 
+Chioggia
+Detroit Dark Red 
+Early Wonder</li></ol>
 Nutritional information
 Serving size: 100 g
 Energy: 180 kJ Carbohydrates: 9.96 g Fat: 0.18 g
