--- a/index.html
+++ b/index.html
@@ -35,8 +35,12 @@
     <li>Detroit Dark Red</li>
     <li>Early Wonder</li>
 </ol>
-Nutritional information
-Serving size: 100 g
+    
+<h2>Nutritional information</h2>
+    
+    <aside>
+        <dl><dt>Serving size:<data>100 g</data></dt></dl></aside>
+ 
 Energy: 180 kJ Carbohydrates: 9.96 g Fat: 0.18 g
 Protein: 1.68 g
 Tags
