--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     
         <p><dt>Serving size:<data>100 g</data></dt></p> 
         <dl>
-            <dt>Energy:<dd><data>80 kJ</data></dt></dd>
+            <dt>Energy:<data>80 kJ</data></dt>
             <dt>Carbohydrates:</dt><dd>9.96g</dd>
             <dt>Fat:</dt><dd>0.18 g</dd>
         </dl>
